split styles.css, fix some spacings

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,88 +22,30 @@ body {
   background-image: url("../img/backgrounds/1.gif");
   color: white;
   background-attachment: fixed;
-  overflow: hidden;
-}
-
-.scroll-container {
+  /* overflow: hidden; */
   height: 100vh;
   overflow-y: auto;
-  /* Enable scrolling */
-  overflow-x: hidden;
-}
-
-.title-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 100vw;
-  margin-top: 0.5rem;
-}
-
-.title-img {
-  width: 800px;
-  height: auto;
-}
-
-.main-navbar {
-  width: 800px;
-
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-
-  background-image: url('../img/grids/blue_row.png');
-  background-size: cover;
-  background-position: center;
-
-  border: #3041FF solid 2px;
-
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
-  font-size: 32px;
-
-  color: #3041FF;
-}
-
-.main-navbar a {
-  text-decoration: none;
-  color: #3041FF;
-  font-weight: bold;
-}
-
-.main-navbar a:hover {
-  text-decoration: underline;
-}
-
-.nav-link {
-  display: flex;
-  align-items: center;
-  gap: 0.25rem;
-}
-
-.nav-icon {
-  height: 32px;
 }
 
 .content-container {
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  gap: 0.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  width: max-content;
 }
 
-.title-banner {
-  width: 800px;
-  height: 64px;
+aside {
+  width: 400px;
+  height: max-content;
+}
 
-  background-image: url('../img/grids/blue_title_grid.png');
-  background-size: cover;
-  background-position: center;
+.left {
+  float: left;
+  margin-right: 0.5rem;
+}
 
-  border: #3041FF solid 2px;
+.right {
+  float: right;
+  margin-left: 0.5rem;
 }
 
 .content-background {
@@ -149,9 +91,6 @@ body {
 }
 
 .secondary-content {
-  width: 400px;
-  height: max-content;
-
   background-image: url('../img/grids/blue_row.png');
   background-size: contain;
   background-position: center;
@@ -159,12 +98,17 @@ body {
 
   border: #3041FF solid 2px;
 
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left:1rem;
+  padding-right: 1rem;
+
+  width: 400px;
+  max-width: 400px;
+  overflow: hidden;
 }
 
 .secondary-content section {
   padding: 0.25rem;
+  padding-bottom: 0.2rem;
 }
 
 .under-construction-divider {
@@ -221,24 +165,6 @@ h4 {
   padding: 0.5rem;
 }
 
-.marquee {
-  animation: marquee 15s linear infinite;
-}
-
-.marquee span {
-  animation: marquee 15s linear infinite;
-}
-
-@keyframes marquee {
-  0% {
-    transform: translate(0, 0);
-  }
-
-  100% {
-    transform: translate(-100%, 0);
-  }
-}
-
 a {
   color: #3041FF;
   text-decoration: none;
@@ -249,27 +175,9 @@ a:hover {
   text-decoration: underline;
 }
 
-#statuscafe-username a {
-  font-weight: bold;
-}
-
-#statuscafe-username:not(a) {
-  color: gray;
-}
-
-#statuscafe-timeAgo {
-  color: rgb(90, 90, 90);
+.version {
+  text-align: center;
   font-size: 18px;
-}
-
-.status-feeling {
-  display: inline-flex;
-  align-items: center;
-  gap: 0.25rem;
-}
-
-.status-divider {
   color: gray;
-  font-size: 16px;
-  align-self: center;
+  /* margin-bottom: 1rem; */
 }
